--- a/packages/snap/snap.manifest.json
+++ b/packages/snap/snap.manifest.json
@@ -1,13 +1,13 @@
 {
   "version": "0.1.0",
   "description": "A snap to manage Dogecoin assets",
-  "proposedName": "Dogecoin Snap",
+  "proposedName": "Aztec Snap",
   "repository": {
     "type": "git",
     "url": "https://github.com/MetaMask/template-snap-monorepo.git"
   },
   "source": {
-    "shasum": "5sPu+mYUcFVAVTKWV+aNYkn3x5VU3xIa6PBXSkDqg+k=",
+    "shasum": "ttEDlwcB4ikmtjX9uejfS98WSNdegr5OPte/5u7oqQE=",
     "location": {
       "npm": {
         "filePath": "dist/bundle.js",
@@ -23,12 +23,8 @@
       "dapps": true,
       "snaps": false
     },
-    "endowment:network-access": {},
-    "snap_getBip44Entropy": [
-      {
-        "coinType": 1
-      }
-    ]
+    "endowment:webassembly": {},
+    "endowment:network-access": {}
   },
   "manifestVersion": "0.1"
 }
