--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "lint:fix": "yarn lint:eslint --fix && yarn lint:misc --write",
     "lint:misc": "prettier '**/*.json' '**/*.md' '!**/CHANGELOG.md' '**/*.yml' --ignore-path .gitignore",
     "start": "yarn workspaces foreach --parallel --interlaced --verbose run start",
-    "test": "echo \"TODO\""
+    "test": "echo \"TODO\"",
+    "reinstall": "rm -rf node_modules yarn.lock & yarn cache clean & yarn"
   },
   "devDependencies": {
     "@metamask/eslint-config": "^10.0.0",
@@ -43,7 +44,6 @@
     "prettier-plugin-packagejson": "^2.2.18",
     "typescript": "^4.7.4"
   },
-  "packageManager": "yarn@3.2.1",
   "engines": {
     "node": ">=16.0.0"
   }
