--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -2,6 +2,7 @@
   "name": "snap",
   "version": "0.1.0",
   "description": "The 'Hello, world!' of MetaMask Snaps, now written in TypeScript.",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "https://github.com/MetaMask/template-snap-monorepo.git"
@@ -27,10 +28,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "@aztec/aztec.js": "^0.14.2",
-    "@aztec/circuits.js": "^0.14.2",
-    "@aztec/foundation": "^0.14.2",
-    "@aztec/types": "^0.15.0",
+    "@aztec/aztec.js": "0.15.1",
+    "@aztec/foundation": "0.15.1",
+    "@aztec/types": "0.15.1",
     "@metamask/snaps-types": "^3.0.1",
     "@metamask/snaps-ui": "^3.0.1",
     "buffer": "^6.0.3"
@@ -44,8 +44,11 @@
     "@metamask/eslint-config-typescript": "^12.0.0",
     "@metamask/snaps-cli": "^3.0.1",
     "@metamask/snaps-jest": "^3.0.0",
+    "@metamask/snaps-webpack-plugin": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
+    "copy-webpack-plugin": "^11.0.0",
+    "esbuild-loader": "^4.0.2",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "~2.26.0",
@@ -57,10 +60,12 @@
     "jest": "^29.5.0",
     "prettier": "^2.7.1",
     "prettier-plugin-packagejson": "^2.2.11",
+    "resolve-typescript-plugin": "^2.0.1",
     "rimraf": "^3.0.2",
     "through2": "^4.0.2",
     "ts-jest": "^29.1.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.8.4",
+    "webpack": "^5.89.0"
   },
   "engines": {
     "node": ">=18.6.0"
@@ -68,5 +73,6 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
-  }
+  },
+  "types": "./dest/index.d.ts"
 }
