--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "esModuleInterop": true,
     "exactOptionalPropertyTypes": true,
     "forceConsistentCasingInFileNames": true,
-    "lib": ["ES2020", "DOM"],
+    "lib": ["es2022", "DOM"],
     "module": "CommonJS",
     "moduleResolution": "node",
     "noEmit": true,
@@ -11,6 +11,8 @@
     "noUncheckedIndexedAccess": true,
     "skipLibCheck": true,
     "strict": true,
-    "target": "es2020"
+    "target": "es2022",
+    "declaration": true,
+
   }
 }
