--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "useUnknownInCatchVariables": false,
     "sourceMap": true,
     "strict": true,
-    "target": "ES2020"
+    "target": "esnext"
   },
   "exclude": ["**/__snapshots__/**", "**/test/**", "**/*.test.ts"]
 }
