--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -4,16 +4,19 @@
   "private": true,
   "license": "(MIT-0 OR Apache-2.0)",
   "files": [
-    "dest/"
+    "dest",
+    "src"
   ],
   "scripts": {
-    "build": "webpack",
-    "clean": "rimraf public",
     "lint": "yarn lint:eslint && yarn lint:misc --check",
     "lint:eslint": "eslint . --cache --ext js,ts",
     "lint:fix": "yarn lint:eslint --fix && yarn lint:misc --write",
     "lint:misc": "prettier '**/*.json' '**/*.md' '!CHANGELOG.md' --ignore-path .gitignore",
-    "start": "react-scripts start"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject",
+    "serve": "serve ./build"
   },
   "browserslist": {
     "production": [
@@ -27,17 +30,18 @@
       "last 1 safari version"
     ]
   },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
   "dependencies": {
     "@aztec/aztec.js": "0.16.7",
     "@aztec/noir-contracts": "0.16.7",
     "@metamask/providers": "^9.0.0",
     "@ziad-saab/dogecoin-snap": "file:../snap",
-    "buffer": "^6.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-is": "^18.2.0",
-    "sass-loader": "^13.3.2",
-    "styled-components": "5.3.3"
+    "buffer": "^6.0.3"
   },
   "devDependencies": {
     "@metamask/eslint-config": "^10.0.0",
@@ -47,14 +51,15 @@
     "@svgr/webpack": "^8.1.0",
     "@testing-library/dom": "^8.17.1",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
+    "@types/react": "^18.2.25",
+    "@types/react-dom": "^18.2.10",
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
+    "crypto-browserify": "^3.12.0",
     "css-loader": "^6.8.1",
     "esbuild-loader": "^4.0.2",
     "eslint": "^8.21.0",
@@ -66,15 +71,27 @@
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.2.1",
     "prettier-plugin-packagejson": "^2.2.18",
+    "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
+    "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
-    "resolve-typescript-plugin": "^2.0.1",
     "rimraf": "^3.0.2",
+    "sass-loader": "^13.3.2",
     "stream-browserify": "^3.0.0",
+    "styled-components": "5.3.3",
     "tty-browserify": "^0.0.1",
-    "typescript": "^5.0.4",
+    "typescript": "5.0.4",
     "util": "^0.12.5",
+    "web-vitals": "^3.5.0",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "resolutions": {
+    "react": "18.2.0",
+    "styled-components": "5.3.3"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
