--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/MetaMask/template-snap-monorepo.git"
   },
   "license": "(MIT-0 OR Apache-2.0)",
-  "main": "src/index.ts",
+  "main": "dist/types/src/index.d.ts",
   "files": [
     "dist/",
     "images/",
@@ -44,7 +44,6 @@
     "@metamask/eslint-config-nodejs": "^10.0.0",
     "@metamask/eslint-config-typescript": "^10.0.0",
     "@metamask/snaps-cli": "^3.0.5",
-    "@metamask/snaps-webpack-plugin": "3.1.1",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "esbuild-loader": "^4.0.2",
@@ -60,10 +59,9 @@
     "resolve-typescript-plugin": "^2.0.1",
     "rimraf": "^3.0.2",
     "stream-browserify": "^3.0.0",
-    "through2": "^4.0.2",
     "ts-loader": "^9.5.1",
     "tty-browserify": "^0.0.1",
-    "typescript": "^5.0.4",
+    "typescript": "5.0.4",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   },
