--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ziad-saab/dogecoin-dapp",
+  "name": "@abstract-crypto/snap-dapp",
   "version": "0.1.0",
   "private": true,
   "license": "(MIT-0 OR Apache-2.0)",
@@ -37,10 +37,10 @@
     ]
   },
   "dependencies": {
+    "@abstract-crypto/aztec-snap-lib": "file:../lib",
     "@aztec/aztec.js": "0.16.7",
     "@aztec/noir-contracts": "0.16.7",
     "@metamask/providers": "^9.0.0",
-    "@ziad-saab/dogecoin-snap": "file:../snap",
     "buffer": "^6.0.3"
   },
   "devDependencies": {
@@ -54,6 +54,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/node": "^20.10.5",
     "@types/react": "^18.2.25",
     "@types/react-dom": "^18.2.10",
     "@types/styled-components": "^5.1.25",
