patch aztec.js getECDSA acc

--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -9,10 +9,7 @@
   },
   "license": "(MIT-0 OR Apache-2.0)",
   "type": "module",
-  "exports": {
-    "./helpers": "./dest/helpers/index.js",
-    "./types": "./dest/types/index.d.ts"
-  },
+  "main": "./dest/index.js",
   "scripts": {
     "build": "tsc -b",
     "build:clean": "yarn clean && yarn build",
