--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -33,7 +33,8 @@
     "bitcoinjs-lib": "^5.2.0",
     "buffer": "^6.0.3",
     "coininfo": "^5.2.1",
-    "envify": "^4.1.0"
+    "envify": "^4.1.0",
+    "ethers": "^5.7.2"
   },
   "devDependencies": {
     "@lavamoat/allow-scripts": "^2.0.3",
