--- a/packages/snap/tsconfig.json
+++ b/packages/snap/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.json",
   "include": [
     "src",
+    "src/**/*.json"
   ],
   "compilerOptions": {
     "composite": true,
