--- a/packages/snap/tsconfig.json
+++ b/packages/snap/tsconfig.json
@@ -12,5 +12,5 @@
     "rootDir": "src",
     "outDir": "./dist",
   },
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "contract"]
 }
