--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -11,12 +11,8 @@
     "lint": "yarn lint:eslint && yarn lint:misc --check",
     "lint:eslint": "eslint . --cache --ext js,ts",
     "lint:fix": "yarn lint:eslint --fix && yarn lint:misc --write",
-    "lint:misc": "prettier '**/*.json' '**/*.md' '!CHANGELOG.md' --ignore-path .gitignore",
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject",
-    "serve": "serve ./build"
+    "dev": "vite",
+    "build": "vite build"
   },
   "browserslist": {
     "production": [
@@ -38,59 +34,41 @@
   },
   "dependencies": {
     "@abstract-crypto/aztec-snap-lib": "workspace:^",
-    "@aztec/aztec.js": "0.16.7",
-    "@aztec/noir-contracts": "0.16.7",
-    "@metamask/providers": "^9.0.0",
-    "buffer": "^6.0.3"
+    "@aztec/accounts": "0.24.0",
+    "@aztec/aztec.js": "0.24.0",
+    "@aztec/noir-contracts.js": "0.24.0",
+    "@mantine/core": "^7.3.2",
+    "@mantine/hooks": "^7.3.2",
+    "@metamask/providers": "^14.0.2",
+    "@tabler/icons-react": "^2.47.0",
+    "buffer": "^6.0.3",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
-    "@metamask/eslint-config": "^10.0.0",
-    "@metamask/eslint-config-jest": "^10.0.0",
-    "@metamask/eslint-config-nodejs": "^10.0.0",
-    "@metamask/eslint-config-typescript": "^10.0.0",
-    "@svgr/webpack": "^8.1.0",
-    "@testing-library/dom": "^8.17.1",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^20.10.5",
+    "@types/node": "^20.10.6",
     "@types/react": "^18.2.25",
     "@types/react-dom": "^18.2.10",
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
-    "crypto-browserify": "^3.12.0",
-    "css-loader": "^6.8.1",
-    "esbuild-loader": "^4.0.2",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^8.21.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.8.2",
-    "eslint-plugin-jsdoc": "^39.2.9",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.32",
+    "postcss-preset-mantine": "^1.12.2",
+    "postcss-simple-vars": "^7.0.1",
     "prettier": "^2.2.1",
     "prettier-plugin-packagejson": "^2.2.18",
     "react": "^18.2.0",
-    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
-    "rimraf": "^3.0.2",
-    "sass-loader": "^13.3.2",
-    "stream-browserify": "^3.0.0",
-    "styled-components": "5.3.3",
-    "tty-browserify": "^0.0.1",
     "typescript": "5.0.4",
-    "util": "^0.12.5",
-    "web-vitals": "^3.5.0",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "vite": "^5.0.8",
+    "vite-plugin-node-polyfills": "^0.19.0",
+    "vite-plugin-top-level-await": "^1.4.1"
   },
   "resolutions": {
-    "react": "18.2.0",
-    "styled-components": "5.3.3"
+    "react": "18.2.0"
   },
   "engines": {
     "node": ">=18.0.0"
