--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "dogecoin-snap",
+  "name": "aztec-snap",
   "version": "0.1.0",
   "private": true,
   "description": "",
-  "homepage": "https://github.com/ziad-saab/dogecoin-snap#readme",
+  "homepage": "https://github.com/porco-rosso-j/aztec-snap#readme",
   "bugs": {
-    "url": "https://github.com/ziad-saab/dogecoin-snap/issues"
+    "url": "https://github.com/porco-rosso-j/aztec-snap/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ziad-saab/dogecoin-snap.git"
+    "url": "git+https://github.com/porco-rosso-j/aztec-snap.git"
   },
   "license": "(MIT-0 OR Apache-2.0)",
   "author": "Ziad Saab <ziad.saab@gmail.com>",
   "workspaces": [
     "packages/snap",
-    "packages/site"
+    "packages/site",
+    "packages/lib"
   ],
   "scripts": {
     "build": "yarn workspaces foreach --parallel --topological --verbose run build",
@@ -30,10 +31,9 @@
     "reinstall": "rm -rf node_modules yarn.lock & yarn cache clean & yarn"
   },
   "devDependencies": {
-    "@metamask/eslint-config": "^10.0.0",
-    "@metamask/eslint-config-jest": "^10.0.0",
-    "@metamask/eslint-config-nodejs": "^10.0.0",
-    "@metamask/eslint-config-typescript": "^10.0.0",
+    "@metamask/eslint-config": "^12.2.0",
+    "@metamask/eslint-config-nodejs": "^12.1.0",
+    "@metamask/eslint-config-typescript": "^12.1.0",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "eslint": "^8.21.0",
@@ -50,6 +50,6 @@
     "typescript": "5.0.4"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=18.0.0"
   }
 }
