--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -5,7 +5,7 @@
   "description": "A MetaMask snap for Aztec Sandbox",
   "repository": {
     "type": "git",
-    "url": "https://github.com/MetaMask/template-snap-monorepo.git"
+    "url": "https://github.com/porco-rosso-j/aztec-snap.git"
   },
   "license": "(MIT-0 OR Apache-2.0)",
   "files": [
@@ -23,30 +23,27 @@
     "start": "mm-snap watch"
   },
   "dependencies": {
-    "@abstract-crypto/aztec-snap-lib": "file:../lib",
-    "@aztec/aztec.js": "0.16.7",
-    "@aztec/noir-contracts": "0.16.7",
-    "@metamask/key-tree": "^7.0.0",
-    "@metamask/snaps-types": "^3.0.1",
-    "@metamask/snaps-ui": "^3.0.1",
+    "@abstract-crypto/aztec-snap-lib": "workspace:^",
+    "@aztec/accounts": "0.24.0",
+    "@aztec/aztec.js": "0.24.0",
+    "@aztec/noir-contracts.js": "0.24.0",
+    "@metamask/key-tree": "^9.0.0",
+    "@metamask/snaps-sdk": "^3.0.1",
     "buffer": "^6.0.3"
   },
   "devDependencies": {
     "@lavamoat/allow-scripts": "^2.0.3",
     "@metamask/auto-changelog": "^2.6.0",
-    "@metamask/eslint-config": "^10.0.0",
-    "@metamask/eslint-config-jest": "^10.0.0",
-    "@metamask/eslint-config-nodejs": "^10.0.0",
-    "@metamask/eslint-config-typescript": "^10.0.0",
-    "@metamask/snaps-cli": "^3.0.5",
+    "@metamask/eslint-config": "^12.2.0",
+    "@metamask/eslint-config-nodejs": "^12.1.0",
+    "@metamask/eslint-config-typescript": "^12.1.0",
+    "@metamask/snaps-cli": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "esbuild-loader": "^4.0.2",
     "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.8.2",
-    "eslint-plugin-jsdoc": "^39.2.9",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.2.1",
@@ -62,7 +59,7 @@
   },
   "packageManager": "yarn@3.2.1",
   "engines": {
-    "node": ">=16.0.0"
+    "node": ">=18.0.0"
   },
   "browserslist": {
     "production": [
