--- a/packages/snap/tsconfig.json
+++ b/packages/snap/tsconfig.json
@@ -1,16 +1,33 @@
 {
   "extends": "../../tsconfig.json",
-  "include": [
-    "src",
-    "src/**/*.json"
-  ],
+
   "compilerOptions": {
     "composite": true,
     "resolveJsonModule": true,
     "baseUrl": "./",
     "experimentalDecorators": true,
     "rootDir": "src",
-    "outDir": "./dist",
+    "outDir": "./dist"
+    // "target": "ES2020",
+    // "useDefineForClassFields": true,
+    // "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    // "module": "ESNext",
+    // "skipLibCheck": true,
+
+    // /* Bundler mode */
+    // "moduleResolution": "bundler",
+    // "allowImportingTsExtensions": true,
+    // "resolveJsonModule": true,
+    // "isolatedModules": true,
+    // "noEmit": true,
+    // "jsx": "react-jsx",
+
+    // /* Linting */
+    // "strict": true,
+    // "noUnusedLocals": true,
+    // "noUnusedParameters": true,
+    // "noFallthroughCasesInSwitch": true
   },
+  "include": ["src", "src/**/*.json"],
   "exclude": ["node_modules", "dist", "contract"]
 }
