--- a/packages/snap/tsconfig.json
+++ b/packages/snap/tsconfig.json
@@ -1,33 +1,40 @@
 {
-  "extends": "../../tsconfig.json",
+  // "extends": "../../tsconfig.json",
 
   "compilerOptions": {
-    "composite": true,
+    "declaration": false,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "allowJs": true,
+    "useUnknownInCatchVariables": false,
+    "sourceMap": false,
+
+    "target": "esnext",
     "resolveJsonModule": true,
     "baseUrl": "./",
     "experimentalDecorators": true,
     "rootDir": "src",
-    "outDir": "./dist"
-    // "target": "ES2020",
-    // "useDefineForClassFields": true,
-    // "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    // "module": "ESNext",
-    // "skipLibCheck": true,
+    "outDir": "./dist",
 
-    // /* Bundler mode */
-    // "moduleResolution": "bundler",
-    // "allowImportingTsExtensions": true,
-    // "resolveJsonModule": true,
-    // "isolatedModules": true,
-    // "noEmit": true,
+    "useDefineForClassFields": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
+    "skipLibCheck": true,
+
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": false,
+    "isolatedModules": true,
+    "noEmit": false,
     // "jsx": "react-jsx",
 
-    // /* Linting */
-    // "strict": true,
-    // "noUnusedLocals": true,
-    // "noUnusedParameters": true,
-    // "noFallthroughCasesInSwitch": true
+    /* Linting */
+    "strict": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "src/**/*.json"],
-  "exclude": ["node_modules", "dist", "contract"]
+  "include": ["src", "src/**/*.json"]
+  // "exclude": ["node_modules"]
 }
