--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -43,7 +43,8 @@
     "@metamask/providers": "^15.0.0",
     "@tabler/icons-react": "^2.47.0",
     "buffer": "^6.0.3",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "tabler-icons-react": "^1.56.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
