--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/porco-rosso-j/aztec-snap.git"
   },
   "license": "(MIT-0 OR Apache-2.0)",
-  "author": "Ziad Saab <ziad.saab@gmail.com>",
+  "author": "Porco <porcorossoj89@gmail.com>",
   "workspaces": [
     "packages/snap",
     "packages/site",
@@ -31,27 +31,13 @@
     "reinstall": "rm -rf node_modules yarn.lock & yarn cache clean & yarn"
   },
   "devDependencies": {
-    "@metamask/eslint-config": "^12.2.0",
-    "@metamask/eslint-config-nodejs": "^12.1.0",
-    "@metamask/eslint-config-typescript": "^12.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
-    "eslint": "^8.21.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.8.2",
-    "eslint-plugin-jsdoc": "^39.2.9",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.2.1",
-    "prettier-plugin-packagejson": "^2.2.18",
     "typescript": "5.0.4"
   },
   "engines": {
     "node": ">=18.0.0"
   },
-  "resolutions": {
-    "@aztec/foundation@0.24.0": "patch:@aztec/foundation@npm:0.24.0#.yarn/patches/@aztec-foundation-npm-0.24.0-e461fae23e.patch",
-    "@aztec/bb.js@0.24.0": "patch:@aztec/bb.js@npm:0.24.0#.yarn/patches/@aztec-bb.js-npm-0.24.0-7baf20778f.patch"
+  "dependencies": {
+    "patch-package": "^8.0.0",
+    "postinstall": "^0.10.3"
   }
 }
