--- a/packages/snap/package.json
+++ b/packages/snap/package.json
@@ -44,17 +44,11 @@
     "@types/node": "^18.7.23",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
-    "esbuild-loader": "^4.1.0",
     "eslint": "^8.13.0",
-    "path-browserify": "^1.0.1",
     "prettier": "^2.6.2",
-    "resolve-typescript-plugin": "^2.0.1",
     "rimraf": "^3.0.2",
-    "stream-browserify": "^3.0.0",
-    "string_decoder": "^1.3.0",
-    "ts-loader": "9.4.4",
-    "tty-browserify": "^0.0.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "webpack-bundle-analyzer": "^4.10.2"
   },
   "packageManager": "yarn@3.2.1",
   "engines": {
