--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -25,6 +25,7 @@
     "@aztec/accounts": "0.41.0",
     "@aztec/aztec.js": "0.41.0",
     "@aztec/noir-contracts.js": "0.41.0",
+    "@aztec/types": "0.41.0",
     "@metamask/providers": "^15.0.0",
     "buffer": "^6.0.3"
   },
