--- a/packages/lib/tsconfig.json
+++ b/packages/lib/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "es2020",
     "lib": ["dom", "esnext", "es2017.object"],
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "bundler",
     "strict": true,
     "declaration": true,
     "allowSyntheticDefaultImports": true,
