--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -41,10 +41,14 @@
     "@mantine/hooks": "^7.3.2",
     "@mantine/notifications": "^7.3.2",
     "@metamask/providers": "^15.0.0",
+    "@shieldswap/l1-transact": "^0.1.1",
     "@tabler/icons-react": "^2.47.0",
+    "@uniswap/sdk-core": "^5.0.0",
     "buffer": "^6.0.3",
+    "ethers": "^6.12.2",
     "react-router-dom": "^6.22.3",
-    "tabler-icons-react": "^1.56.0"
+    "tabler-icons-react": "^1.56.0",
+    "viem": "2.13.2"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
