--- a/packages/snap/tsconfig.json
+++ b/packages/snap/tsconfig.json
@@ -22,5 +22,5 @@
     "outDir": "./dist"
   },
   "include": ["src", "src/**/*.json"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "trash"]
 }
